stl-test/Tests/array_view/array_view/Negative/test8.cpp
//#error
#include <array_view>
int main()
{
    char arr[3][3];
    std::array_view<int, 2> av(arr);
}
